# neodroid_plenoxels

./: .gitignore  README.md  render.slurm  render_free.slurm  requirements.txt  tasks.slurm  test.sbatch  test.slurm  train.slurm
camera_calibration/: calibrate_camera.py  show_calibration_results.py  undistort.py
camera_calibration/calibration/: K.txt  X_all.npy  dc.txt  mean_errors.txt  std_int.txt  u_all.npy
cpp_scripts/dist_loss/: CMakeLists.txt
cpp_scripts/mcubes/: CMakeLists.txt
cpp_scripts/mcubes/data/: bbox1706792066.txt  tensor1706776363.txt
cpp_scripts/mcubes/src/: cuboid.h  main.cpp  mcubes.cpp  mcubes.h  utils.h
python_scripts/: K.txt  colmap_to_NSVF.py  create_NSVF_dataset.py  create_dataset.py  create_dataset_colmorph.py  create_transform_json.py  load_data.py  log  lowercase_extensions.py  mp4_to_frames.py  plot_from_log.py  roiproj.py  transform_formats.txt  wasserstein_dist.py
python_scripts/dataset/: colmap_to_NSVF.py  create_alpha_dataset.py  create_dataset.py  create_dataset_colmorph.py
python_scripts/json/: cameraInit.sfm  sfm.json
python_scripts/roi/: 0_train_0000.txt  convert_dset.py  cube.py  cuboid.py  marchingcubes.py  move_roi.py  proj_points.py  proj_roi.py  roi_mask.py  roiproj.py  transforms.py
python_scripts/utility/: fix_orientation_imgs.py  image_metadata.py  plot_from_log.py  rotate_imgs.py
python_scripts/vol_quality/: ground_truth.py  wasserstein_dist.py
svox2/: .gitignore  environment.yml
svox2/opt/: autotune_neodroid.py  calc_metrics.py  launch_neodroid.sh  opt.py  opt_neodroid.py  render_imgs.py  render_roi.py  (+2 more)
(+150 files in other folders)
